<resources>
    <string name="app_name">UrbanBiteApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_orders">Pedidos</string>
    <string name="menu_favorites">Favoritos</string>
    <string name="menu_configuracion">Configuración</string>
    <string name="menu_ayuda">Ayuda</string>
    <string name="menu_register">Registro</string>
    <string name="menu_login">Login</string>
    <string name="menu_welcome">Welcome</string>
    <string name="menu_logout">Cerrar sesión</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>