<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ico_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ico_orders"
            android:title="@string/menu_orders" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ico_favorites"
            android:title="@string/menu_favorites" />
        <item
            android:id="@+id/nav_configuracion"
            android:icon="@drawable/ico_configuration"
            android:title="@string/menu_configuracion" />
        <item
            android:id="@+id/nav_ayuda"
            android:icon="@drawable/ico_help"
            android:title="@string/menu_ayuda" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ico_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>