<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.inteligentweb.urbanbiteapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_orders"
        android:name="com.inteligentweb.urbanbiteapp.ui.orders.FragmentOrders"
        android:label="@string/menu_orders"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.inteligentweb.urbanbiteapp.ui.favorites.FragmentFavorites"
        android:label="@string/menu_favorites"
        tools:layout="@layout/fragment_favorites" />
    <fragment
        android:id="@+id/nav_configuracion"
        android:name="com.inteligentweb.urbanbiteapp.ui.configuracion.FragmentConfiguracion"
        android:label="@string/menu_configuracion"
        tools:layout="@layout/fragment_configuracion" />
    <fragment
        android:id="@+id/nav_ayuda"
        android:name="com.inteligentweb.urbanbiteapp.ui.ayuda.FragmentAyuda"
        android:label="@string/menu_ayuda"
        tools:layout="@layout/fragment_ayuda" />
    <fragment
        android:id="@+id/nav_login"
        android:name="com.inteligentweb.urbanbiteapp.ui.auth.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/login_fragment">
        <action
            android:id="@+id/action_login_to_register"
            app:destination="@id/nav_register" />
    </fragment>
    <fragment
        android:id="@+id/nav_register"
        android:name="com.inteligentweb.urbanbiteapp.ui.auth.RegisterFragmentnt"
        android:label="@string/menu_register"
        tools:layout="@layout/register_fragmentnt">
        <action
            android:id="@+id/action_register_to_login"
            app:destination="@id/nav_login" />
    </fragment>

    <fragment
        android:id="@+id/nav_welcome"
        android:name="com.inteligentweb.urbanbiteapp.ui.welcome.WelcomeFragment"
        android:label="@string/menu_welcome"
        tools:layout="@layout/fragment_welcome">
        <action
            android:id="@+id/action_welcome_to_login"
            app:destination="@id/nav_login" />
        <action
            android:id="@+id/action_welcome_to_register"
            app:destination="@id/nav_register" />
    </fragment>

    <!--    <fragment-->
    <!--        android:id="@+id/nav_slideshow"-->
    <!--        android:name="com.inteligentweb.urbanbiteapp.ui.slideshow.SlideshowFragment"-->
    <!--        android:label="@string/menu_logout"-->
    <!--        tools:layout="@layout/fragment_slideshow" />-->
</navigation>